--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 r? - setenv, unsetenv
 ... environ_ll to char ** and free that too in child
 betty (b&r - refactor long functions)
+r - puts inplace of printf
 r - man page
 r - readme
 b - blog post
